--- a/requirements.txt
+++ b/requirements.txt
@@ -4,24 +4,41 @@
 #
 #    pip-compile
 #
+appdirs==1.4.3            # via black
 argon2-cffi==19.1.0
+aspy.yaml==1.3.0          # via pre-commit
 atomicwrites==1.3.0       # via pytest
-attrs==19.1.0             # via pytest
+attrs==19.1.0             # via black, pytest
+black==19.3b0
 cffi==1.12.3              # via argon2-cffi
+cfgv==2.0.0               # via pre-commit
+click==7.0                # via black
 django==2.2.2
-importlib-metadata==0.18  # via pluggy, pytest
+entrypoints==0.3          # via flake8
+flake8==3.7.7
+identify==1.4.5           # via pre-commit
+importlib-metadata==0.18  # via pluggy, pre-commit, pytest
+importlib-resources==1.0.2  # via pre-commit
+mccabe==0.6.1             # via flake8
 more-itertools==7.0.0     # via pytest
+nodeenv==1.3.3            # via pre-commit
 packaging==19.0           # via pytest
 pluggy==0.12.0            # via pytest
+pre-commit==1.17.0
 psycopg2-binary==2.8.3
 py==1.8.0                 # via pytest
+pycodestyle==2.5.0        # via flake8
 pycparser==2.19           # via cffi
+pyflakes==2.1.1           # via flake8
 pyparsing==2.4.0          # via packaging
 pytest-django==3.5.0
 pytest==4.6.3             # via pytest-django
 python-dotenv==0.10.3
 pytz==2019.1              # via django
-six==1.12.0               # via argon2-cffi, packaging, pytest
+pyyaml==5.1.1             # via aspy.yaml, pre-commit
+six==1.12.0               # via argon2-cffi, cfgv, packaging, pre-commit, pytest
 sqlparse==0.3.0           # via django
+toml==0.10.0              # via black, pre-commit
+virtualenv==16.6.0        # via pre-commit
 wcwidth==0.1.7            # via pytest
 zipp==0.5.1               # via importlib-metadata
