--- a/requirements.txt
+++ b/requirements.txt
@@ -12,17 +12,17 @@ attrs==19.1.0             # via black, pytest
 black==19.3b0
 cffi==1.12.3              # via argon2-cffi
 cfgv==2.0.0               # via pre-commit
-click==7.0                # via black
+click==7.0                # via black, pip-tools
 django==2.2.2
 entrypoints==0.3          # via flake8
 flake8==3.7.7
 identify==1.4.5           # via pre-commit
 importlib-metadata==0.18  # via pluggy, pre-commit, pytest
-importlib-resources==1.0.2  # via pre-commit
 mccabe==0.6.1             # via flake8
 more-itertools==7.0.0     # via pytest
 nodeenv==1.3.3            # via pre-commit
 packaging==19.0           # via pytest
+pip-tools==3.8.0
 pluggy==0.12.0            # via pytest
 pre-commit==1.17.0
 psycopg2-binary==2.8.3
@@ -36,7 +36,7 @@ pytest==4.6.3             # via pytest-django
 python-dotenv==0.10.3
 pytz==2019.1              # via django
 pyyaml==5.1.1             # via aspy.yaml, pre-commit
-six==1.12.0               # via argon2-cffi, cfgv, packaging, pre-commit, pytest
+six==1.12.0               # via argon2-cffi, cfgv, packaging, pip-tools, pre-commit, pytest
 sqlparse==0.3.0           # via django
 toml==0.10.0              # via black, pre-commit
 virtualenv==16.6.0        # via pre-commit
