add graphql routes and sample query

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_ENV=local
 
-SECRET_KEY=^qNxDIw6^mxTZxvwA1rNyAcPLwS2DIAxE@87q7qd%3A4&AWXvACQkHenCP6n^K0t
+SECRET_KEY=change-me
 
 DATABASE_NAME=test
 DATABASE_USER=test
