add jwt authentication to graphql using drf-simplejwt

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - mysite
   app:
     build: .
+    restart: always
     command: python3 manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/home/app
