--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: python
 python:
   - "3.7.3"
 install:
-  - pip install pytest
+  - pip install pytest-django==3.5.0
 script:
   - pytest
 notifications:
